# privacyworm

./: .gitignore  BUILD_SPEC.md  LAUNCH.md  LICENSE  README.md  REVIEW-2026-04-22.md  pyproject.toml  smoke_test.py
.github/workflows/: test.yml
docs/: CONTRIBUTING.md  PLAYBOOK_SPEC.md  SECURITY.md
playbooks/: beenverified.yaml  fastpeoplesearch.yaml  intelius.yaml  mylife.yaml  peoplefinder.yaml  radaris.yaml  spokeo.yaml  truepeoplesearch.yaml  usphonebook.yaml  whitepages.yaml
playbooks/mugshots/: arrestfacts.com.yaml  arrests.com.yaml  arrests.org.yaml  bustedmugshots.com.yaml  instantcheckmate.com.yaml  jailbase.com.yaml  justmugshots.com.yaml  mugshots.com.yaml  mugshotsandmore.com.yaml  publicrecords.directory.yaml
playbooks/social/: facebook.yaml  instagram.yaml  linkedin.yaml  mastodon.yaml  pinterest.yaml  reddit.yaml  tiktok.yaml  tumblr.yaml  twitter.yaml
privacyworm/: __init__.py  cli.py  cli_helpers.py  config.py  extract.py  matching.py  playbook.py  profile.py  runner.py  state.py
privacyworm/brokers/: base.py  email.py  web_form.py
privacyworm/inbox/: base.py  imap.py
privacyworm/mugshot/: __init__.py  cli.py  letters.py
privacyworm/social/: __init__.py  cli.py  oauth.py  playbook.py  reddit.py  timeparse.py  tokens.py  twitter.py
scripts/: render_support_table.py
tests/: test_extract.py  test_inbox_safety.py  test_legal_basis.py  test_mugshot_letters.py  test_mugshot_playbooks.py  test_playbook_security.py  test_playbook_validation.py  test_profile.py  test_review.py  test_scrub.py  test_social_playbooks.py  test_social_timeparse.py  test_social_tokens.py  test_state.py  test_state_encryption.py
tests/fixtures/: invalid_playbook.yaml  spokeo_results.html  valid_playbook.yaml
