[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privacyworm"
version = "1.0.0"
description = "An agent that finds your listings on data-broker sites and files opt-out requests. Runs on your machine - your PII never touches a third-party server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Simon Paige" },
]
keywords = ["privacy", "data-broker", "opt-out", "personal-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "playwright>=1.40",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "beautifulsoup4>=4.12",
]

[project.scripts]
privacyworm = "privacyworm.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
